--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "carousel-react-rcdev": "^0.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.2.11",
     "react-material-ui-carousel": "^3.4.2",
+    "react-phone-number-input": "^3.2.19",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.2",
     "sort-by": "^1.2.0"
   },
