--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
+    "@mui/styles": "^5.12.0",
+    "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "carousel-react-rcdev": "^0.0.5",
